feat: Add swagger spec for delivery and delivery-attempts endpoints
